feat: Update github-readme-stats, plugin config.

--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -3,7 +3,7 @@
 <!-- Insert generated snippet here -->
 <script
     src="https://giscus.app/client.js"
-    data-repo="HeroLink/giscus"
+    data-repo="linkch0/giscus"
     data-repo-id="R_kgDOKwDX4w"
     data-category="General"
     data-category-id="DIC_kwDOKwDX484CbHTq"
